# gl2gh

./: .env.example  .gitignore  AGENTS.md  AZURE_AI_SETUP.md  BUILD_FIX.md  DEEP_COMPONENT_DISCOVERY_IMPLEMENTATION.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAF_INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_TESTING.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE4_TRANSFORM_AGENT_SUMMARY.md  PHASE7_COMPLETE.md  PROJECT_SELECTION_UI.md  PROJECT_SELECTION_UI_VISUAL.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_PLATFORM.md  ROLLBACK_IMPLEMENTATION.md  SECURITY_ADVISORY.md  TEST_COVERAGE_SUMMARY.md  USER_MAPPING_ENHANCEMENT.md  docker-compose.production.yml  docker-compose.yml  health-check.sh  pyproject.toml  run-tests.sh  start.sh  test_discovery_integration.py  test_foundation.py  test_sow.py  validate_discovery.py
.github/: copilot-instructions.md
backend/: Dockerfile  requirements.txt  test.sh
discovery_agent/: __init__.py  __main__.py  agent_logic.py  ai_analyzer.py  ci_parser.py  config.py  enrichment_types.py  gitlab_client.py  health.py  logging_config.py  metrics.py  orchestrator.py  rate_limiting.py  schema.py  scoring.py  sow_generator.py  tools.py  utils.py
docs/: ACTION_REVERSIBILITY.md  ARCHITECTURE.md  ATTACHMENTS.md  BATCH_MIGRATION.md  BRANCH_PROTECTION_MIGRATION.md  EXPORT_AGENT.md  HOURS_ESTIMATION.md  MICROSOFT_AGENT_FRAMEWORK.md  MIGRATION_COVERAGE.md  PACKAGE_MIGRATION_GUIDE.md  PHASE6_IMPLEMENTATION.md  PLAN_SCHEMA.md  REST_SSE_FALLBACK.md  (+5 more)
(+227 files in other folders)
